; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_fas216.c_fas216_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_fas216.c_fas216_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i64 }

@REG_CMD = common dso_local global i32 0, align 4
@CMD_RESETCHIP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fas216_remove(%struct.Scsi_Host* %0) #0 {
  %2 = alloca %struct.Scsi_Host*, align 8
  %3 = alloca i32*, align 8
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %2, align 8
  %4 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %5 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @fas216_checkmagic(i32* %8)
  %10 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %11 = call i32 @scsi_remove_host(%struct.Scsi_Host* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @REG_CMD, align 4
  %14 = load i32, i32* @CMD_RESETCHIP, align 4
  %15 = call i32 @fas216_writeb(i32* %12, i32 %13, i32 %14)
  %16 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %17 = call i32 @scsi_host_put(%struct.Scsi_Host* %16)
  ret void
}

declare dso_local i32 @fas216_checkmagic(i32*) #1

declare dso_local i32 @scsi_remove_host(%struct.Scsi_Host*) #1

declare dso_local i32 @fas216_writeb(i32*, i32, i32) #1

declare dso_local i32 @scsi_host_put(%struct.Scsi_Host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
